commit these files

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,3 +1,4 @@
+
 // Ionic Variables and Theming. For more info, please see:
 // http://ionicframework.com/docs/v2/theming/
 $font-path: "../assets/fonts";
@@ -74,5 +75,6 @@ $colors: (
 // Fonts
 // --------------------------------------------------
 
+// @import "montserrat";
 @import "roboto";
 @import "noto-sans";
